Finak Deatails Added

--- a/app/globals.css
+++ b/app/globals.css
@@ -131,7 +131,7 @@ body {
   background-size: 20px 20px;
 }
 .bg-man-1 {
-  background-image: url('/assets/images/man-1.png');
+  background-image: url('/assets/images/founder-image.jpeg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
